[package]
name = "dummy_project"
version = "0.1.0"
authors = ["Prabhat Kalle <pskalle2@illinois.edu>", "Shubham Mital <svmital2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textplots = "0.6"
linfa = "0.6.0"
linfa-trees = "0.6.0"
linfa-datasets = { version = "0.6.0", features = ["iris"] }
csv = "1.1"
ndarray = "0.15.6"
